# jitb-py

./: .gitignore  README.md  pyproject.toml
src/jitb/: __init__.py  cda.py  cdb.py  error.py  exitify.py  ntb.py  rb.py
tests/: test_jitb.py
